--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2269,7 +2269,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2023/03/30 v1.90 Typesetting articles for the Association for Computing Machinery]
+[2023/06/11 v1.90a Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -2380,6 +2380,7 @@
 % \changes{1.84}{2022/04/09}{New journals: JDS, GAMES}
 % \changes{1.85}{2022/05/08}{Added CC licenses}
 % \changes{1.87}{2022/08/02}{New format: |acmcp|}
+% \changes{1.90a}{2023/06/11}{Changes in the sample keywords and concepts}
 %
 % And the driver code:
 %    \begin{macrocode}
