--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -258,6 +258,11 @@
 \acmCodeLink{https://github.com/borisveytsman/acmart}
 \acmDataLink{htps://zenodo.org/link}
 %%
+%% Authors' contribution
+\acmContributions{BT and GKMT designed the study; LT, VB, and AP
+  conducted the experiments, BR, HC, CP and JS analyzed the results,
+  JPK developed analytical predictions, all authors participated in
+  writing the manuscript.}
 %%
 %% Sometimes the addresses are too long to fit on the page.  In this
 %% case uncomment the lines below and fill them accodingly.
