--- a/README
+++ b/README
@@ -12,7 +12,9 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
-Version 1.90a   Changes in the sample keywords and concepts
+Version 1.91   Minor changes in ACMCP format
+
+Version 1.90a  Changes in the sample keywords and concepts
 
 Version 1.90   Journal ISSN updated
 
