Documentation update: use of anonymous throughout

--- a/README
+++ b/README
@@ -12,6 +12,8 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 1.92   Documentation update
+
 Version 1.91   Minor changes in ACMCP format
 
 Version 1.90a  Changes in the sample keywords and concepts
