--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -413,7 +413,7 @@ author's own version, with {\itshape very} few changes to the source.
 \section{Template Overview}
 As noted in the introduction, the ``\verb|acmart|'' document class can
 be used to prepare many different kinds of documentation --- a
-double-blind initial submission of a full-length technical paper, a
+double-anonymous initial submission of a full-length technical paper, a
 two-page SIGGRAPH Emerging Technologies abstract, a ``camera-ready''
 journal article, a SIGCHI Extended Abstract, and more --- all by
 selecting the appropriate {\itshape template style} and {\itshape
@@ -458,7 +458,7 @@ of these parameters can be found in the {\itshape \LaTeX\ User's Guide.}
 
 Frequently-used parameters, or combinations of parameters, include:
 \begin{itemize}
-\item {\texttt{anonymous,review}}: Suitable for a ``double-blind''
+\item {\texttt{anonymous,review}}: Suitable for a ``double-anonymous''
   conference submission. Anonymizes the work and includes line
   numbers. Use with the \texttt{\acmSubmissionID} command to print the
   submission's unique ID on each page of the work.
